# CryptoInvestment

./: .gitignore  README.md  pyproject.toml
crypto_investment/: amplify.yaml  amplify.yml
crypto_investment/amplify/: amplify.yaml  package-lock.json  package.json
crypto_investment/amplify-app/: .graphqlconfig.yml  package-lock.json  package.json
crypto_investment/amplify-app/amplify/: team-provider-info.json
crypto_investment/amplify-app/amplify/.config/: project-config.json
crypto_investment/amplify-app/amplify/backend/: backend-config.json
crypto_investment/amplify-app/src/: App.vue  main.js
crypto_investment/amplify-app/src/components/: InvestmentPlot.vue
crypto_investment/amplify-app/src/graphql/: mutations.js  queries.js  schema.json  schema.json.graphql  subscriptions.js
crypto_investment/amplify-app/src/models/: index.d.ts  index.js  schema.js
crypto_investment/amplify/amplify/: team-provider-info.json
crypto_investment/amplify/amplify/#current-cloud-backend/: amplify-meta.json  backend-config.json
crypto_investment/amplify/amplify/.config/: local-env-info.json  project-config.json
crypto_investment/amplify/public/: index.html
crypto_investment/amplify/src/: App.vue
crypto_investment/lambdas/: deploy.sh  samconfig.toml  template.yaml  test_stack.sh
crypto_investment/lambdas/.aws-sam/: build.toml
crypto_investment/lambdas/calculate_predictions/: calculate_predictions.py
crypto_investment/lambdas/fetch_prices/: fetch_prices.py
crypto_investment/lambdas/visualize_data/: visualize_data.py
(+18 files in other folders)
